SGD8-2521: Fix Theme footer btn + spacing

--- a/components/41-organisms/theme-footer/_theme-footer.scss
+++ b/components/41-organisms/theme-footer/_theme-footer.scss
@@ -117,16 +117,25 @@
           }
         }
       }
+
+      li {
+        margin-bottom: 0;
+        padding: 0 10px 0 0;
+
+        &:last-child {
+          padding-right: 0;
+        }
+      }
     }
   }
 
   .newsletter {
     @include medium-text;
     flex-grow: 1;
-    max-width: 768px;
     padding: 30px;
 
     @include desktop {
+      max-width: 768px;
       padding: 60px 70px;
     }
 
@@ -136,7 +145,7 @@
     }
 
     .more-link {
-      margin-top: 20px;
+      margin-top: 30px;
     }
 
     &:not(:last-child) {
@@ -151,14 +160,13 @@
     + .social {
       @include theme('background-color', 'color-tertiary-pastel', 'theme-footer-social-background');
 
-      max-height: 230px;
       margin: -60px 20px 0;
       padding: 30px;
 
       .social-list {
         ul {
           width: calc(100% + 20px);
-          margin: 0 -5px;
+          margin: 0;
 
           a {
             &,
@@ -197,6 +205,7 @@
     @include tablet {
       display: flex;
       flex-wrap: wrap;
+      align-items: flex-start;
     }
 
     @include desktop {
